--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -71,8 +71,9 @@
         <input type="text" id="filter" placeholder="Buscar...">
       </div>
 
-      {{!-- <button class="botomn_register">Cadastrar</button> --}}
-      <a href="/cadastro/servidor" class="botomn_register">Cadastrar</a>
+      <a href="/cadastrar_usuario" class="botomn_register">
+        <button class="botomn_register">Cadastrar</button>
+      </a>
       
     </div>
 
@@ -104,5 +105,6 @@
     </div>
   </div>
 </div>
+
 {{/inline}}
 {{/main}}
