--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,20 @@
+/* 
+
+2 até 140 -> navegação
+145 até 289 -> listagem
+292 até X -> Cadastro
+*/
+
 @font-face{
     font-family:  inter_font;
     src: url(fonts/Inter-VariableFont_opsz\,wght.ttf) format(truetype);
+    
+    font-family: Poppins;
+    src: url(icons/tabler-icons/fonts/Poppins-Regular.ttf) format(truetype);
 }
 
 *{
-     font-family: inter_font;
+    font-family: Poppins;
 }
 
 body{
@@ -50,7 +60,6 @@ body{
 /* --- */
 
 .botton_backups{
-    width: 100%;
     height: 30px;
 
     display: flex;
@@ -150,6 +159,7 @@ body{
         height: 125px;
 
         font-size: 20px;
+        /* font-weight: bold; */
 
         display: flex;
         justify-content: left;
@@ -227,10 +237,10 @@ body{
                 width: 100px;
                 height: 35px;
                 border-radius: 6px;
-                margin-left: 30px;
 
                 background-color: #000000;
                 color: white;
+                font-size: 14px;
             }
         
         .registers{
@@ -253,8 +263,6 @@ body{
             .listing_table {
                 width: 100%;
             }
-
-                
 
                 .thead_listing_table tr{
                     height: 37px;
@@ -284,3 +292,22 @@ body{
                 .tbody_listing_table td {
                     width: 133.58px;
                 }
+
+.body_register {
+    width: 100%;
+    height: 100%;
+}
+
+.area_register{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formulario {
+    width: 647px;
+    height: 586px;
+    background-color: #F6F8FA;
+}
