--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,7 +7,7 @@
   <title>Modernize Free</title>
   <link rel="shortcut icon" type="image/png" href="/images/logos/favicon.png" />
   {{!-- <link rel="stylesheet" href="/css/styles.min.css" /> --}}
-  <link rel="stylesheet" href="/css/listing.css" />
+  <link rel="stylesheet" href="/css/home.css" />
 </head>
 
 <body>
@@ -21,5 +21,6 @@
   <script src="/libs/apexcharts/dist/apexcharts.min.js"></script>
   <script src="/libs/simplebar/dist/simplebar.js"></script>
   <script src="/js/dashboard.js"></script>
+
 </body>
 </html>
