colocando pagina cadastro usuario dentro do template + ajustando css

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,26 +5,20 @@
 292 até X -> Cadastro
 */
 
-@font-face{
-    font-family:  inter_font;
-    src: url(fonts/Inter-VariableFont_opsz\,wght.ttf) format(truetype);
-    
-    font-family: Poppins;
-    src: url(icons/tabler-icons/fonts/Poppins-Regular.ttf) format(truetype);
+* {
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
-*{
-    font-family: Poppins;
-}
-
-body{
+body {
     display: flex;
     padding: 0;
     margin: 0;
 }
 
-.nav{
-    height: 100vh;
+.nav {
     width: 270px;
     background-color: white;
     border-right: 1px solid #D9D9D9;
@@ -41,7 +35,7 @@ body{
     align-items: center;
 }
 
-.botton_dashboard{
+.botton_dashboard {
     width: 100%;
     height: 30px;
 
@@ -51,15 +45,15 @@ body{
 }
 
 
-    .img_botton_dashboard img {
-        width: 15px;
-        height: 16px;
-        padding-right: 20px;
-    }
+.img_botton_dashboard img {
+    width: 15px;
+    height: 16px;
+    padding-right: 20px;
+}
 
 /* --- */
 
-.botton_backups{
+.botton_backups {
     height: 30px;
 
     display: flex;
@@ -71,15 +65,15 @@ body{
     padding-left: 28%;
 }
 
-    .img_botton_backup img {
-        width: 15px;
-        height: 16px;
-        padding-right: 20px;
-    } 
+.img_botton_backup img {
+    width: 15px;
+    height: 16px;
+    padding-right: 20px;
+}
 
 /* --- */
 
-.botton_usuarios{
+.botton_usuarios {
     width: 100%;
     height: 30px;
 
@@ -87,27 +81,25 @@ body{
     align-items: center;
 }
 
-    .side_botton_usuarios{
-        border-radius: 9px;
-        border-left: 5px solid #2C2D2F;
-        margin-left: 1px;
-        height: 33px;
-    }
+.side_botton_usuarios {
+    border-radius: 9px;
+    border-left: 5px solid #2C2D2F;
+    margin-left: 1px;
+    height: 33px;
+}
 
-    .img_botton_usuarios{
-        padding-left: 15%;
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+.img_botton_usuarios {
+    padding-left: 15%;
 
-        .img_botton_usuarios img {
-            width: 35px;
-            height: 16px;
-        }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-
+.img_botton_usuarios img {
+    width: 35px;
+    height: 16px;
+}
 
 .nav_footer {
     width: 100%;
@@ -118,187 +110,198 @@ body{
     align-items: center;
 }
 
-    .nav_bottomn {
-        width: 138px;
-        height: 30px;
-        background-color: #F9F9F9;
+.nav_bottomn {
+    width: 138px;
+    height: 30px;
+    background-color: #F9F9F9;
 
-        display: flex;
-        justify-content: left;
-        align-items: center;
-        
-        border: 1px solid #C3C5CE;
-        border-radius: 8px;
-    }
+    display: flex;
+    justify-content: left;
+    align-items: center;
 
-    .nav_bottomn img {
-        padding-left: 10px;
-        display: flex;
-        justify-content: left;
-    }
+    border: 1px solid #C3C5CE;
+    border-radius: 8px;
+}
 
-    .nav_bottomn p {
-        padding: 35px;
-    }
+.nav_bottomn img {
+    padding-left: 10px;
+    display: flex;
+    justify-content: left;
+}
 
+.nav_bottomn p {
+    padding: 35px;
+}
 
+/* CORPO */
+.cabecalho {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    width: 100%;
+
+    margin: 40px 0;
+}
 
 /* CORPO */
 
 
-.body{
+.body {
     width: 100%;
-    height: 100vh;
-    background-color: white;
-    
-    padding-left: 130px;
-}   
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 80px;
+}
 
-    .title {
-        width: 100%;
-        height: 125px;
+.title {
+    width: 100%;
+    height: 125px;
 
-        font-size: 20px;
-        /* font-weight: bold; */
+    font-size: 20px;
+    /* font-weight: bold; */
 
-        display: flex;
-        justify-content: left;
-        align-items: end;
-    }
+    display: flex;
+    justify-content: left;
+    align-items: end;
+}
 
-    .sub_title {
-        width: 100%;
-        height: 18px;
-    }
+.sub_title {
+    width: 100%;
+    height: 18px;
+}
 
-    .sub_title p {
-        padding: 0;
-        margin: 0;
-    }
+.sub_title p {
+    padding: 0;
+    margin: 0;
+}
 
-    .container_table{
-        width: 1390px;
-    }
+.container_table {
+    width: 1390px;
+}
 
-        .menu_table {
-            width: 100%;
+.menu_table {
+    width: 100%;
 
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            
-            padding-top: 60px;
-        }
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-            .count_registers {
-                display: flex;
-                justify-content: left;
-                align-items: center;
-            }
+    padding-top: 60px;
+}
 
-                .count_registers p{
-                    color: #2C2D2F;
-                }
+.count_registers {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
 
-                .count_registers label{
-                    margin-left: 10px;
-                    color: #859084;
-                }
+.count_registers p {
+    color: #2C2D2F;
+}
 
-            .label_search{
-                margin-left: 900px;
-                border: 1px solid #6F7382;
-                border-radius: 8px;
-                
-                display: flex;
-                justify-content: left;
-                align-items: center;
+.count_registers label {
+    margin-left: 10px;
+    color: #859084;
+}
 
-                width: 300px;
-                height: 35px;
-            }
+.label_search {
+    margin-left: 900px;
+    border: 1px solid #6F7382;
+    border-radius: 8px;
 
-                .label_search img{
-                    width: auto;
-                    height: auto;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 
-                    padding-left: 10px;
-                }
+    width: 300px;
+    height: 35px;
+}
 
-                .label_search input {
-                    width: 100%;
-                    margin-left: 10px;
+.label_search img {
+    width: auto;
+    height: auto;
 
-                    border: none;
-                    outline: none;
-                }
-            
-            .botomn_register{
-                width: 100px;
-                height: 35px;
-                border-radius: 6px;
+    padding-left: 10px;
+}
 
-                background-color: #000000;
-                color: white;
-                font-size: 14px;
-            }
-        
-        .registers{
-            width: 100%;
+.label_search input {
+    width: 100%;
+    margin-left: 10px;
 
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            
-        }
+    border: none;
+    outline: none;
+}
 
-        .registers label {
-            margin-right: 30px;
-        }
+.botomn_register {
+    width: 100px;
+    height: 35px;
+    border-radius: 6px;
 
-        .area_listing_table{
-            padding-top: 20px;
-        }
+    background-color: #000000;
+    color: white;
+    font-size: 14px;
+}
 
-            .listing_table {
-                width: 100%;
-            }
+.registers {
+    width: 100%;
 
-                .thead_listing_table tr{
-                    height: 37px;
-                    background-color: #F1F1F1;
-                    border-radius: 8px;
-                    color: #2C2D2F;
-                    padding: 0px 10px 0px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;                     
-                }
+}
 
-                .thead_listing_table th{
-                    width: 133.58px;
-                    text-align: left;
-                }
+.registers label {
+    margin-right: 30px;
+}
 
-                .tbody_listing_table tr{
-                    display: flex;
-                    justify-content: space-between;
-                    color: #6F7382;
-                    border-bottom: 1px solid #6F7382;
-                    padding: 20px 10px 10px 10px;
-                }
+.area_listing_table {
+    padding-top: 20px;
+}
 
-                .tbody_listing_table td {
-                    width: 133.58px;
-                }
+.listing_table {
+    width: 100%;
+}
+
+.thead_listing_table tr {
+    height: 37px;
+    background-color: #F1F1F1;
+    border-radius: 8px;
+    color: #2C2D2F;
+    padding: 0px 10px 0px 10px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.thead_listing_table th {
+    width: 133.58px;
+    text-align: left;
+}
+
+.tbody_listing_table tr {
+    display: flex;
+    justify-content: space-between;
+    color: #6F7382;
+    border-bottom: 1px solid #6F7382;
+    padding: 20px 10px 10px 10px;
+}
+
+.tbody_listing_table td {
+    width: 133.58px;
+}
 
 .body_register {
     width: 100%;
     height: 100%;
 }
 
-.area_register{
+.area_register {
     width: 100%;
     height: 100%;
     display: flex;
