--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     padding: 0;
     margin: 0;
+    height: 100vh;
 }
 
 .nav {
@@ -42,6 +43,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 8px;
 }
 
 
@@ -59,6 +61,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: left;
+    gap: 8px;
 
     padding-top: 10px;
     padding-bottom: 575px;
@@ -76,6 +79,7 @@ body {
 .botton_usuarios {
     width: 100%;
     height: 30px;
+    gap: 8px;
 
     display: flex;
     align-items: center;
@@ -116,8 +120,9 @@ body {
     background-color: #F9F9F9;
 
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
+    gap: 8px;
 
     border: 1px solid #C3C5CE;
     border-radius: 8px;
