--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -24,29 +24,51 @@
     </div>
 
     <div class='nav_body'>
-      <div class='botton_dashboard'>
+      <div class='botton_dashboard' onclick="window.location.href='/dashboard'" style="cursor: pointer;">
         <div class='img_botton_dashboard'>
-          <img src="images/icon_dashboard.svg" alt="Ícone de dashboards">
+          <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M1 6.83333L8.5 1L16 6.83333V16C16 16.442 15.8244 16.8659 15.5118 17.1785C15.1993 17.4911 14.7754 17.6667 14.3333 17.6667H2.66667C2.22464 17.6667 1.80072 17.4911 1.48816 17.1785C1.17559 16.8659 1 16.442 1 16V6.83333Z"
+              stroke="#202125" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M6 17.6667V9.33333H11V17.6667" stroke="#202125" stroke-width="1.3" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
         </div>
 
         <p>Dashboard</p>
       </div>
 
-      <div class='botton_backups'>
+      <div class='botton_backups' onclick="window.location.href='/backups'" style="cursor: pointer;">
         <div class='img_botton_backup'>
-          <img src="images/icon_backups.svg" alt="Ícone de backups">
+          <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M8.5 6C12.6421 6 16 4.88071 16 3.5C16 2.11929 12.6421 1 8.5 1C4.35786 1 1 2.11929 1 3.5C1 4.88071 4.35786 6 8.5 6Z"
+              stroke="black" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M16 10C16 11.1067 12.6667 12 8.5 12C4.33333 12 1 11.1067 1 10" stroke="black" stroke-width="1.3"
+              stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M1 4V15.5294C1 16.8965 4.33333 18 8.5 18C12.6667 18 16 16.8965 16 15.5294V4" stroke="#202125"
+              stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
         </div>
 
         <p>Backups</p>
       </div>
 
-      <div class='botton_usuarios'>
+      <div class='botton_usuarios' onclick="window.location.href='/users'" style="cursor: pointer;">
         <div class='side_botton_usuarios'>
           <p></p>
         </div>
 
         <div class='img_botton_usuarios'>
-          <img src="images/botton_usuarios.svg" alt="Ícone de usuários">
+          <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M8.5 6C12.6421 6 16 4.88071 16 3.5C16 2.11929 12.6421 1 8.5 1C4.35786 1 1 2.11929 1 3.5C1 4.88071 4.35786 6 8.5 6Z"
+              stroke="black" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M16 10C16 11.1067 12.6667 12 8.5 12C4.33333 12 1 11.1067 1 10" stroke="black" stroke-width="1.3"
+              stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M1 4V15.5294C1 16.8965 4.33333 18 8.5 18C12.6667 18 16 16.8965 16 15.5294V4" stroke="#202125"
+              stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
         </div>
 
         <p>Usuários</p>
@@ -54,8 +76,14 @@
     </div>
 
     <div class="nav_footer">
-      <div class='nav_bottomn'>
-        <img src="images/icon_sair.svg" alt="Ícone de sair">
+      <div class='nav_bottomn' style="cursor: pointer;">
+        <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.5 14L1 7.5L7.5 1" stroke="black" stroke-width="1.3" stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path d="M0.999976 7.5H16.6" stroke="black" stroke-width="1.3" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+
 
         <p>Sair</p>
       </div>
